--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "devDependencies": {
     "grunt": "0.4.1",
     "grunt-cli": "0.1.9",
-    "grunt-contrib-jshint": "0.6.4"
+    "grunt-contrib-jshint": "0.6.4",
+    "grunt-contrib-watch": "~0.5.3"
   },
   "scripts": {
     "test": "grunt --verbose"
