--- a/.travis.yml
+++ b/.travis.yml
@@ -2,3 +2,8 @@ language: node_js
 
 node_js:
   - "0.10"
+
+notifications:
+  email:
+    - chris.burrell@rackspace.com
+    - eddy.hernandez@rackspace.com
