--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "canon-angular",
   "version": "0.1.0",
+  "dependencies": {
+    "grunt-karma": "~0.4.5"
+  },
   "devDependencies": {
     "grunt": "0.4.1",
     "grunt-cli": "0.1.9",
