--- a/package.json
+++ b/package.json
@@ -5,7 +5,14 @@
     "grunt": "0.4.1",
     "grunt-cli": "0.1.9",
     "grunt-contrib-jshint": "0.6.4",
-    "grunt-contrib-watch": "~0.5.3"
+    "grunt-contrib-watch": "~0.5.3",
+    "grunt-contrib-connect": "*",
+    "connect-livereload": "~0.2.0",
+    "grunt-open": "~0.2.0",
+    "grunt-ngmin": "~0.0.3",
+    "grunt-contrib-clean": "~0.5.0",
+    "grunt-contrib-uglify": "~0.2.0",
+    "grunt-contrib-concat": "*"
   },
   "scripts": {
     "test": "grunt --verbose"
