--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
   },
   "scripts": {
     "test": "grunt --verbose"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/rackerlabs/canon-angular/"
   }
 }
