--- a/bower.json
+++ b/bower.json
@@ -10,7 +10,8 @@
     "**/*"
   ],
   "dependencies": {
-    "angular": "1.2.0-rc.3",
+    "canon": "1.3.1",
+    "angular": "1.2.0",
     "jquery": "1.10.2"
   }
 }
