--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,8 @@ node_js:
   - "0.10"
 
 before_install:
-  - "/sbin/start-stop-daemon --start --quiet --pidfile /tmp/custom_xvfb_99.pid --make-pidfile --background --exec /usr/bin/Xvfb -- :99 -ac -screen 0 1280x1024x16"
+  - "export DISPLAY=:99.0"
+  - "sh -e /etc/init.d/xvfb start"
   - npm install -g bower
   - bower install
 
