--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,12 @@
 language: node_js
-
 node_js:
   - "0.10"
 
-before_install:
-  - "export DISPLAY=:99.0"
-  - "sh -e /etc/init.d/xvfb start"
+before_script:
+  - export DISPLAY=:99.0
+  - sh -e /etc/init.d/xvfb start
+  - npm install -g grunt-cli
+  - npm install -g karma
   - npm install -g bower
   - bower install
 
@@ -13,3 +14,6 @@ notifications:
   email:
     - chris.burrell@rackspace.com
     - eddy.hernandez@rackspace.com
+
+script:
+  - grunt
