--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "grunt-karma": "~0.4.5"
   },
   "devDependencies": {
-    "grunt": "0.4.1",
+    "grunt": "~0.4.2",
     "grunt-cli": "0.1.9",
     "grunt-contrib-jshint": "0.6.4",
     "grunt-contrib-watch": "~0.5.3",
