feat(directives) Adds directives for button and list

--- a/.jshintrc
+++ b/.jshintrc
@@ -10,7 +10,17 @@
   "unused": false,
   "boss": true,
   "eqnull": true,
+  "strict": true,
+  "trailing": true,
+  "maxlen": 80,
+  "browser": true,
   "node": true,
+  "nonew": true,
+  "quotmark": "single",
+  "unused": true,
+  "maxdepth": 3,
+  "maxcomplexity": 10,
+  "onevar": true,
   "globals": {
     "describe": false,
     "it": false,
