--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,7 @@
   ],
   "dependencies": {
     "canon": "1.3.1",
-    "angular": "1.2.3",
-    "jquery": "1.10.2"
+    "angular": "~1.2.3",
+    "angular-mocks": "~1.2.3"
   }
 }
