--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "grunt-contrib-jshint": "0.6.4",
     "grunt-contrib-watch": "~0.5.3",
     "grunt-contrib-connect": "*",
-    "connect-livereload": "~0.2.0",
+    "connect-livereload": "~0.3.1",
     "grunt-open": "~0.2.0",
     "grunt-ngmin": "~0.0.3",
     "grunt-contrib-clean": "~0.5.0",
     "grunt-contrib-uglify": "~0.2.0",
-    "grunt-contrib-concat": "*"
+    "grunt-contrib-concat": "*",
+    "grunt-html2js": "~0.2.3",
+    "grunt-contrib-copy": "~0.4.1"
   },
   "scripts": {
     "test": "grunt --verbose"
