--- a/bower.json
+++ b/bower.json
@@ -6,7 +6,7 @@
     "build/canon-angular.min.js"
   ],
   "dependencies": {
-    "canon": "1.3.1",
+    "canon": "~1.4.0",
     "angular": "~1.2.3",
     "angular-mocks": "~1.2.3"
   }
